allow to upload .env

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@
 # #-------------------------
 # # These should never be under version control,
 # # as it poses a security risk.
-# .env
+.env
 # .vagrant
 # Vagrantfile
 
